ConGo_E-Comm/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecom-app
  template:
    metadata:
      labels:
        app: ecom-app
    spec:
      containers:
      - name: ecom-app
        image: kruptedx5/ecom
        ports:
        - containerPort: 8000
