ConGo_E-Comm/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-app-service
spec:
  selector:
    app: ecom-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
