ConGo_E-Comm/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-app-ingress
spec:
  rules:
  - host: *
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ecom-app-service
            port:
              number: 8000
